# scnt-dip

./: .gitignore  CMakeLists.txt  README.md  settings.env  setup.sh
cmake/: scnt-dip-config.cmake.in
exec/dip/: CMakeLists.txt  main.cpp  main.h
gtest/: CMakeLists.txt  dip_hierarchy.cpp  dip_parse_arrays.cpp  dip_parse_dtypes.cpp  dip_parsing.cpp  dip_test.cpp  test_branching.cpp  test_expressions.cpp  test_functions.cpp  test_hierarchy.cpp  test_modifications.cpp  test_options.cpp  test_parse_arrays.cpp  test_parse_dimensions.cpp  test_parse_dip.cpp  test_parse_scalars.cpp  test_parse_strings.cpp  test_parse_tables.cpp  test_properties.cpp  test_references.cpp  test_references_raw.cpp  test_slicing.cpp  test_solver_logical.cpp  test_source_list.cpp  test_sources.cpp  test_unit_list.cpp  test_units.cpp
src/: CMakeLists.txt  dip.cpp  dip.h  environment.cpp  environment.h  helpers.h  parsers.cpp  parsers.h  settings.h
src/lists/: hierarchy_list.cpp  hierarchy_list.h  list_branching.cpp  list_functions.cpp  list_hierarchy.cpp  list_node.cpp  list_source.cpp  list_unit.cpp  lists.h  node_list.cpp  node_list.h  nodes.cpp  nodes.h  source_list.cpp  source_list.h  sources.cpp  sources.h
src/nodes/: node.cpp  node.h  node_base.cpp  node_boolean.cpp  node_case.cpp  node_condition.cpp  node_constant.cpp  node_description.cpp  node_empty.cpp  node_float.cpp  node_format.cpp  node_group.cpp  node_import.cpp  node_integer.cpp  node_modification.cpp  node_options.cpp  node_property.cpp  node_quantity.cpp  node_source.cpp  node_string.cpp  node_table.cpp  node_tags.cpp  node_unit.cpp  node_value.cpp  nodes.h  parser.cpp  value.cpp  values.cpp  values.h  values_array.h  values_scalar.h
src/solvers/: solver_function.cpp  solver_logical.cpp  solvers.h
src/values/: values.h  values_array.h  values_complex.h  values_scalar.h
